ingress_controller/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-dev-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    # - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-dev-service
                port:
                  number: 80
